--- a/src/components/inventory/newItem/newItem.html
+++ b/src/components/inventory/newItem/newItem.html
@@ -2,60 +2,103 @@
   <require from="../../../data/extra/enums"></require>
   <require from="../../../resources/value-converters/translate"></require>
 
-  <div class="newItem-area" show.bind="state">
-    <div class="typeselect">
-      <label><input type="radio" name="typeradio" value="item" checked.bind="selectedType" />Item</label>
-      <label><input type="radio" name="typeradio" value="armor" checked.bind="selectedType" ref="armorradio" />Armor</label>
-      <label><input type="radio" name="typeradio" value="weapon" checked.bind="selectedType" ref="weaponradio" />Weapon</label>
+  <div class="newItemArea" show.bind="state">
+    <input class="itemName" type="text" placeholder="Name" value.bind="name"/>
+    <div class="typeSelectArea">
+      <div class="typeTabs">
+        <label><input type="radio" name="typeradio" value="item" checked.bind="selectedType" ref="itemradio"/>Item</label>
+        <label><input type="radio" name="typeradio" value="armor" checked.bind="selectedType" ref="armorradio" />Armor</label>
+        <label><input type="radio" name="typeradio" value="weapon" checked.bind="selectedType" ref="weaponradio" />Weapon</label>
+      </div>
+      <div class="itemContentArea">
+        <!-- ITEM SPECIFIC VARIABLES -->
+        <div show.bind="itemradio.checked" class="flex-container">
+          <div class="textInput flex-center">
+            <label>Quantity</label>
+            <input type="number" value.bind="quantity" placeholder="Quantity" />
+          </div>
+          <div class="flex-center itemEquippable">
+            <label><input type="checkbox" class="labelCheckBox" checked.bind="equippable" />Equippable</label>
+          </div>
+        </div>
+
+        <!-- ARMOR SPECIFIC VARIABLES -->
+        <div show.bind="armorradio.checked" class="flex-container">
+          <div class="textInput flex-center">
+            <label>Base AC</label>
+            <input type="number" value.bind="baseAC" placeholder="Base AC" />
+          </div>
+          <div class="textInput flex-center">
+            <label>Max Dex bonus</label>
+            <input type="number" value.bind="maxDexBonus" placeholder="Max Dex bonus" />
+          </div>
+        </div>
+
+        <!-- WEAPON SPECIFIC VARIABLES -->
+        <div show.bind="weaponradio.checked" class="flex-container">
+          <div class="textInput flex-center">
+            <label>Damage</label>
+            <input type="text" value.bind="damage" placeholder="1d8" />
+          </div>
+          <div class="textInput flex-center">
+            <label>Type</label>
+            <input type="text" value.bind="damageType" placeholder="Slashing" />
+          </div>
+        </div>
+      </div>
     </div>
-    <input type="text" placeholder="Name" value.bind="name"/>
-    <label><input type="checkbox" disabled.bind="armorradio.checked || weaponradio.checked" checked.bind="equippable" />Equippable</label>
-    <label><input type="checkbox" checked.bind="attunement" />Requires attunement</label>
-    <div show.bind="armorradio.checked" class="armorarea">
-      <label>Base AC and maximum dexterity bonus</label>
-      <input type="number" value.bind="baseAC" placeholder="Base AC" />
-      <input type="number" value.bind="maxDexBonus" placeholder="Max Dex bonus" />
+    <div class="flexArea">
+      <!-- ATTUNEMENT -->
+      <div class="itemContentArea">
+        <label><input type="checkbox" checked.bind="attunement" />Requires attunement</label>
+      </div>
+
+      <!-- SKILLS -->
+      <div class="skillArea">
+        <span class="header">Skills</span>
+        <ul>
+          <li repeat.for="skill of additionalSkillProfiencies">
+            ${skill | translate:data.translations:'skill' }
+          </li>
+        </ul>
+        <div class="flex-container">
+          <select value.bind="selectedSkillProfiency">
+            <option repeat.for="skillEnum of SkillEnums" model.bind="skillEnum">
+              ${skillEnum | translate:data.translations:'skill' }
+            </option>
+          </select>
+          <button class="flex-fixed addButton" click.delegate="addSkillProfiency()">Add</button>
+        </div>
+      </div>
+
+      <!-- PROFIENCIES -->
+      <div class="profiencyArea">
+        <span class="header">Other profiencies</span>
+        <ul>
+          <li repeat.for="profiency of additionalOtherProfiencies">
+            ${profiency.name}
+          </li>
+        </ul>
+        <input type="text" placeholder="New profiency name" value.bind="newOtherProfiencyName" />
+        <button click.delegate="addOtherProfiency()">Add</button>
+      </div>
+
+      <!-- TRAITS -->
+      <div class="traitArea">
+        <span class="header">Traits</span>
+        <ul>
+          <li repeat.for="trait of additionalTraits">
+            ${trait.name}
+          </li>
+        </ul>
+        <input type="text" placeholder="New trait name" value.bind="newTraitName" />
+        <button click.delegate="addTrait()">Add</button>
+      </div>
     </div>
-    <div show.bind="weaponradio.checked" class="weaponarea">
-      <label>Damage</label>
-      <input type="text" value.bind="damage" placeholder="1d8" />
-      <input type="text" value.bind="damageType" placeholder="Slashing" />
+
+    <div class="buttonArea">
+      <button class="createButton" click.delegate="reset()">Cancel</button>
+      <button class="createButton" disabled.bind="!name" click.delegate="createItem()">Create item</button>
     </div>
-    <div class="newItem-skills">
-      <label>Granted skill profiencies</label>
-      <ul>
-        <li repeat.for="skill of additionalSkillProfiencies">
-          ${skill | translate:data.translations:'skill' }
-        </li>
-      </ul>
-      <select value.bind="selectedSkillProfiency">
-        <option repeat.for="skillEnum of SkillEnums" model.bind="skillEnum">
-          ${skillEnum | translate:data.translations:'skill' }
-        </option>
-      </select>
-      <button click.delegate="addSkillProfiency()">Add skill</button>
-    </div>
-    <div class="newItem-profiencies">
-      <label>Granted other profiencies</label>
-      <ul>
-        <li repeat.for="profiency of additionalOtherProfiencies">
-          ${profiency.name}
-        </li>
-      </ul>
-      <input type="text" placeholder="New profiency name" value.bind="newOtherProfiencyName" />
-      <button click.delegate="addOtherProfiency()">Add profiency</button>
-    </div>
-    <div class="newItem-traits">
-      <label>Granted traits and features</label>
-      <ul>
-        <li repeat.for="trait of additionalTraits">
-          ${trait.name}
-        </li>
-      </ul>
-      <input type="text" placeholder="New trait name" value.bind="newTraitName" />
-      <button click.delegate="addTrait()">Add trait</button>
-    </div>
-    <button class="createButton" disabled.bind="!name" click.delegate="createItem()">Create item</button>
-    <button class="createButton" click.delegate="reset()">Cancel</button>
   </div>
 </template>
