--- a/src/components/functionsArea.scss
+++ b/src/components/functionsArea.scss
@@ -5,12 +5,12 @@
   flex-direction: column;
   height: 100%;
 
-  > * {
-    flex: 1 auto;
+  > *:not(.functionsArea) {
+    flex: 1 1 auto;
     overflow-y: auto;
   }
   .functionsArea {
-    flex: 0 auto;
+    flex: 0 40px;
     display: flex;
     flex-direction: row-reverse;
     height: $areaSize_functions;
