--- a/src/components/combat/combat.scss
+++ b/src/components/combat/combat.scss
@@ -59,7 +59,14 @@
           text-align: center;
 
           .hpInput {
+            padding-left: 5px;
             width: 70px;
+            height: auto;
+            font-size: 24px;
+          }
+          .hdInput {
+            padding-left: 5px;
+            width: 50px;
             height: auto;
             font-size: 24px;
           }
